[package]
name = "vitis"
version = "0.1.0"
edition = "2021"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.26"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.url]
version = "2.3"
features = ["serde"]

[dependencies]
dashmap = "5.4"
anyhow = "1.0"
